logger: 1s chunk dedup, FAST/COMPACT encoder modes, slim ffmpeg rebuild
Recorder pipeline
- 1-second chunk dedup in snapshotForError: warnings firing inside the
  same 1s chunk share a single clip path, cross-level. Aligns with stage-1
  segment_time so two snapshots in the same chunk would have produced
  byte-identical clips anyway. Collapses loop-warning workloads from N
  clips to roughly N / chunks-touched without sacrificing fidelity.
- Encoder pool queue bounded to 16; rejected submissions cause
  snapshotForError to return null and the HTML row renders a
  "video unavailable" badge over the screenshot poster (clickable to
  open the screenshot itself).
- Video buffer ceiling lowered from 300s to 90s. Default stays 30s.

Encoder mode UI + plumbing
- New "Encoding mode" select in Start Logger Session: FAST (libx264
  -preset ultrafast, larger files, ~0.5-1s encode for a 30s clip) and
  COMPACT (libaom-av1 -cpu-used 8, smaller files, ~5-15s encode).
  Default FAST.
- EncodingMode enum + parameter threaded through CustomLogger,
  ScreenRecorder, ClipFinalizer, CrashSweep, SessionMeta-adjacent paths.
- ClipFinalizer.encodeSegmentsToMp4 takes the mode and switches the
  ffmpeg arg vector accordingly.

Bundled ffmpeg
- Replaced the stripped LGPL ffmpeg with a cross-compiled n6.0 binary
  built via tools/ffmpeg-build/Dockerfile. Same minimal flags
  (--disable-encoders/decoders/muxers/demuxers/parsers/filters/bsfs and
  re-enable only what the recorder pipelines need) plus
  --enable-gpl --enable-libx264. Final size 13.4 MB (was 11 MB).
- FfmpegBinary.BUNDLED_SHA256 updated to match.
- gitignore excludes tools/ffmpeg-build/out/ (Docker run artifact).

HTML log
- New screen-cell branch: when video was attempted but unavailable
  (videoPosterPath set, videoPath empty), render the poster as a
  clickable image with a small "no video" badge instead of a play
  overlay. CSS rule .video-unavailable .no-video-badge added to the
  log.html template, theming follows existing